Create New Document: fix Create button enabled when the clipboard has no images

BUG: 459800