libs/ui/widgets/kis_image_from_clipboard_widget.h
@@ -34,16 +34,15 @@ public:
     KisImageFromClipboardWidget(QWidget *parent, qint32 defWidth, qint32 defHeight, double resolution, const QString & defColorModel, const QString & defColorDepth, const QString & defColorProfile, const QString & imageName);
     ~KisImageFromClipboardWidget() override;
 
-private Q_SLOTS:
-    void createImage();
-    void clipboardDataChanged();
-    
 protected:
 
     void showEvent(QShowEvent *event) override;
 
 private Q_SLOTS:
     void createClipboardPreview();
+    void createImage();
+    void clipboardDataChanged();
+    void enableImageCreation(const QImage &);
 };
 
 #endif
